# dxc-icons

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
examples/: icons.rs
src/: icons.rs
src/icons/: add_location.rs  aim.rs  alarm_clock.rs  apple.rs  arrow_down.rs  arrow_down_bold.rs  arrow_left.rs  arrow_left_bold.rs  arrow_right.rs  arrow_right_bold.rs  arrow_up.rs  arrow_up_bold.rs  avatar.rs  back.rs  baseball.rs  basketball.rs  bell.rs  bell_filled.rs  bicycle.rs  bottom.rs  bottom_left.rs  bottom_right.rs  bowl.rs  briefcase.rs  brush.rs  brush_filled.rs  burger.rs  calendar.rs  camera.rs  camera_filled.rs  caret_bottom.rs  caret_left.rs  caret_right.rs  caret_top.rs  cellphone.rs  chat_dot_round.rs  chat_dot_square.rs  chat_line_round.rs  chat_line_square.rs  chat_round.rs  (+254 more)
