[package]
name = "dxc-icons"
version = "0.1.3"
license = "MIT"
authors = ["efahnjoe <efahnjoe@outlook.com>"]
description = "Dioxus Icons"
repository = "https://github.com/efahnjoe/dxc-icons"
keywords = ["dx-component", "component", "icons", "svg", "dioxus"]
homepage = "https://github.com/efahnjoe/dxc-icons"
readme = "README.md"
edition = "2021"
exclude = [".cargo/**", ".github/**"]

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack"] }

[build-dependencies]
regex = "1.11.1"
